Add script for verbose testing

--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "start": "PORT=4000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test-verbose": "react-scripts test --verbose",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
