Add controller actions and associated tests for basket_items

--- a/test/fixtures/basket_items.yml
+++ b/test/fixtures/basket_items.yml
@@ -9,3 +9,13 @@ two:
   ingredient: flour
   quantity: 2
   units: cups
+
+three:
+  ingredient: chicken
+  quantity: 2
+  units: lbs
+
+four:
+  ingredient: avocado
+  quantity: 5
+  units: 
